[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://SelectionMenu.gd" id="1"]

[node name="SelectionMenu" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Backdrop" type="ColorRect" parent="Root"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="Root"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = 180.0

[node name="TitleLabel" type="Label" parent="Root/Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 60.0
text = "SELECT PLAYER 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Root/Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="SwordButton" type="Button" parent="Root/Panel/Buttons"]
text = "SWORD"

[node name="RapierButton" type="Button" parent="Root/Panel/Buttons"]
text = "RAPIER"

[node name="DaggerButton" type="Button" parent="Root/Panel/Buttons"]
text = "DAGGER"
